logika waktu sudah selesai

--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QCare</title>
 </head>
+
 <body>
-    <h1>hello</h1>
+    <!-- Header -->
+    <div id="salam">hallo yang</div>
+    <div id="content">jalan yuk</div>
+    <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
+    <script src="js/script.js"></script>
 </body>
+
 </html>
