--- a/index.html
+++ b/index.html
@@ -1,18 +1,66 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>QCare</title>
-</head>
-
-<body>
-    <!-- Header -->
-    <div id="salam">hallo yang</div>
-    <div id="content">jalan yuk</div>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Im.U</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+  </head>
+  <body>
+    <div class="container m-1 p-5 bg-primary">
+      <!-- Example row of columns -->
+      <div class="my-5">
+        <div id="salam" class=""></div>
+      </div>
+    <figure class="figure m-3">
+      <div id="gambar"></div>
+      <figcaption id="caption" class="figure-caption"></figcaption>
+    </figure>
+    </div>
+    <div class="container m-1 p-3 bg-success">
+        <!-- Example row of columns -->
+        <div class="my-5">
+          <h1 id="h"></h1>
+            <div id="content" class=""></div>
+        </div>
+    </div>
+    <div class="container m-1 p-3 bg-success">
+        <!-- Example row of columns -->
+        <div class="my-5">
+          <h1 id="h2"></h1>
+            <div id="content2" class=""></div>
+        </div>
+    </div>
+    <div class="container m-1 p-3 bg-danger">
+        <!-- Example row of columns -->
+        <div class="my-5">
+          <h1 id="h3"></h1>
+            <div id="content3" class=""></div>
+        </div>
+    </div>
+    <div class="card" style="width: 18rem;">
+      <img src="/img/photo.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 id="t" class="card-title"></h5>
+        <p id="a" class="card-text"></p>
+      </div>
+    </div>
+    <div class="card" style="width: 18rem;">
+      <img src="/img/photo.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 id="t2"class="card-title"></h5>
+        <p id="a2" class="card-text"></p>
+      </div>
+    </div>
+    <div class="card" style="width: 18rem;">
+      <img src="/img/photo.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 id="t3"class="card-title"></h5>
+        <p id="a3" class="card-text"></p>
+      </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
     <script src="js/script.js"></script>
-</body>
-
+  </body>
 </html>
