penambahan data faq

--- a/index.html
+++ b/index.html
@@ -45,6 +45,15 @@
     <div id="alert"></div>
   </div>
 
+  <div class="row py-14 py-md-16 mx-8 ">
+    <div class="col-lg-6">
+      <div id="h2" ></div>
+    </div>
+    <div class="col-lg-6">
+      <div id="h3" ></div>
+    </div>
+  </div>
+  <!-- /section -->
   <section class="wrapper bg-light">
     <div class="container py-14 py-md-16">
       <div class="row">
@@ -73,14 +82,95 @@
     </div>
     <!-- /.container -->
   </section>
-  <div class="row py-14 py-md-16 mx-8 ">
-    <div class="col-lg-6">
-      <div id="h2" ></div>
+  <section class="wrapper bg-light">
+    <div class="container py-14 py-md-16">
+      <div class="row gx-lg-8 gx-xl-12 gy-10">
+        <div class="col-lg-6 mb-0">
+          <h2 class="fs-15 text-uppercase text-primary mb-3">FAQ</h2>
+          <h3 class="display-5 mb-4">Semoga beberapa pertanyaan dan jawaban ini dapat membantu mu.</h3>
+        </div>
+        <!--/column -->
+        <div class="col-lg-6">
+          <div id="accordion-3" class="accordion-wrapper">
+            <div class="card">
+              <div class="card-header" id="accordion-heading-3-1">
+                <button id="faq" class="collapsed" data-bs-toggle="collapse" data-bs-target="#accordion-collapse-3-1" aria-expanded="false" aria-controls="accordion-collapse-3-1"></button>
+              </div>
+              <!-- /.card-header -->
+              <div id="accordion-collapse-3-1" class="collapse" aria-labelledby="accordion-heading-3-1" data-bs-target="#accordion-3">
+                <div class="card-body">
+                  <p id="cfaq"></p>
+                </div>
+                <!-- /.card-body -->
+              </div>
+              <!-- /.collapse -->
+            </div>
+            <!-- /.card -->
+            <div class="card">
+              <div class="card-header" id="accordion-heading-3-1">
+                <button id="faq-2" class="collapsed" data-bs-toggle="collapse" data-bs-target="#accordion-collapse-3-1" aria-expanded="false" aria-controls="accordion-collapse-3-1"></button>
+              </div>
+              <!-- /.card-header -->
+              <div id="accordion-collapse-3-1" class="collapse" aria-labelledby="accordion-heading-3-1" data-bs-target="#accordion-3">
+                <div class="card-body">
+                  <p id="cfaq-2"></p>
+                </div>
+                <!-- /.card-body -->
+              </div>
+              <!-- /.collapse -->
+            </div>
+            <!-- /.card -->
+            <div class="card">
+              <div class="card-header" id="accordion-heading-3-1">
+                <button id="faq-3" class="collapsed" data-bs-toggle="collapse" data-bs-target="#accordion-collapse-3-1" aria-expanded="false" aria-controls="accordion-collapse-3-1"></button>
+              </div>
+              <!-- /.card-header -->
+              <div id="accordion-collapse-3-1" class="collapse" aria-labelledby="accordion-heading-3-1" data-bs-target="#accordion-3">
+                <div class="card-body">
+                  <p id="cfaq-3"></p>
+                </div>
+                <!-- /.card-body -->
+              </div>
+              <!-- /.collapse -->
+            </div>
+            <!-- /.card -->
+            <div class="card">
+              <div class="card-header" id="accordion-heading-3-1">
+                <button id="faq-4" class="collapsed" data-bs-toggle="collapse" data-bs-target="#accordion-collapse-3-1" aria-expanded="false" aria-controls="accordion-collapse-3-1"></button>
+              </div>
+              <!-- /.card-header -->
+              <div id="accordion-collapse-3-1" class="collapse" aria-labelledby="accordion-heading-3-1" data-bs-target="#accordion-3">
+                <div class="card-body">
+                  <p id="cfaq-4"></p>
+                </div>
+                <!-- /.card-body -->
+              </div>
+              <!-- /.collapse -->
+            </div>
+            <!-- /.card -->
+            <div class="card">
+              <div class="card-header" id="accordion-heading-3-1">
+                <button id="faq-5" class="collapsed" data-bs-toggle="collapse" data-bs-target="#accordion-collapse-3-1" aria-expanded="false" aria-controls="accordion-collapse-3-1"></button>
+              </div>
+              <!-- /.card-header -->
+              <div id="accordion-collapse-3-1" class="collapse" aria-labelledby="accordion-heading-3-1" data-bs-target="#accordion-3">
+                <div class="card-body">
+                  <p id="cfaq-5"></p>
+                </div>
+                <!-- /.card-body -->
+              </div>
+              <!-- /.collapse -->
+            </div>
+            <!-- /.card -->
+          </div>
+          <!-- /.accordion-wrapper -->
+        </div>
+        <!--/column -->
+      </div>
+      <!--/.row -->
     </div>
-    <div class="col-lg-6">
-      <div id="h3" ></div>
-    </div>
-  </div>
+    <!-- /.container -->
+  </section>
   <!-- /section -->
   <!--/.modal -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
