--- a/bangun.html
+++ b/bangun.html
@@ -51,8 +51,7 @@
                     Ayo rapikan <br />
                     tempat tidur mu
                     <p>
-                      Membereskan kembali kasur setelah bangun tidur memiliki beberapa manfaat bagi kesehatan, seperti membantu meningkatkan kualitas tidur dengan menciptakan lingkungan tidur yang bersih dan nyaman. Selain itu, tindakan ini
-                      dapat membantu mengurangi
+                      Membereskan kembali kasur setelah bangun tidur memiliki beragam manfaat kesehatan. Tindakan ini membantu meningkatkan kualitas tidur dengan menciptakan lingkungan tidur yang bersih dan nyaman. Selain itu, kasur yang rapi dapat mengurangi risiko alergi dan iritasi akibat debu atau tungau. Melakukan ini juga menciptakan perasaan keteraturan dan kedisiplinan, yang mendukung kesehatan mental dan kualitas hidup. Dengan merawat tempat tidur, kita merawat kesehatan dan kenyamanan kita sendiri, serta menciptakan fondasi tidur yang lebih baik untuk menjalani hari dengan energi dan semangat yang optimal.
                     </p>
                   </div>
                 </div>
@@ -117,7 +116,6 @@
       </div>
     </section>
     <!-- END TO DO -->
-    <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   </body>
 </html>
