--- a/main.html
+++ b/main.html
@@ -36,23 +36,22 @@
             <h1 class="d-none d-md-block nav-logo">Health<span>thin.</span></h1>
           </a>
   
-          <div class="clock d-block d-md-none">08 : 23 AM</div>
-  
+          <div id="jamku" class="clock d-block d-md-none"></div>
+          
           <div class="collapse navbar-collapse menu rounded-2 justify-content-center" id="navbarNavDropdown">
             <ul class="navbar-nav">
               <li class="nav-item nav-hover-1">
                 <a style="padding: 0px" class="nav-link" href="#home">Home</a>
               </li>
               <li class="nav-item nav-hover-7">
-                <a style="padding: 0px" class="nav-link" href="#profil">Blog</a>
+                <a style="padding: 0px" class="nav-link" href="#blog">Blog</a>
               </li>
               <li class="nav-item nav-hover-2">
-                <a style="padding: 0px" class="nav-link" href="#adat">Question</a>
+                <a style="padding: 0px" class="nav-link" href="#faq">Question</a>
               </li>
             </ul>
           </div>
-  
-        <!-- <div class="clock d-md-block d-none">08 : 23 AM</div> -->
+          <div id="jamku2" class="clock d-md-block d-none"></div>
         </div>
     </nav>
     <!-- END NAV -->
@@ -72,7 +71,7 @@
     <!-- aritkel -->
     <section id="blog">
         <div class="container my-5">
-            <div class="blog-judul3 rounded-5 bg-opacity-25 d-inline py-1 px-4">blog</div>
+            <div id="warnaku" class="">blog</div>
             <br />
             <h1 class="blog-title lh-1 w-100 mt-3">
               Ayo Budayakan <br />
@@ -91,7 +90,7 @@
     <section id="faq">
         <div class="container my-5">
           <div class="text-center">
-            <div class="faq-judul4 rounded-5 bg-opacity-25 d-inline py-1 px-4">FAQ</div>
+            <div id="warnaku-2" class="">FAQ</div>
             <h1 class="mt-3">
               Pertanyaan yang <br />
               sering ditanyakan
