--- a/persiapan.html
+++ b/persiapan.html
@@ -83,18 +83,8 @@
                 <div class="todo-11 bg-blue position-relative h-100">
                   <!-- <img src="public/images/thumbs-up.png" alt="" class="jempol position-absolute" /> -->
                   <div class="isi-todo-11 p-4">
-                    Mungkin kamu bisa <br />
-                    mencoba jogging
-                    <p>
-                      Jogging adalah olahraga sederhana yang memberikan sejumlah manfaat signifikan bagi kesehatan fisik dan mental. Salah satu manfaat utamanya adalah meningkatkan kesehatan jantung dan sistem peredaran darah. Dengan
-                      berjoging Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi, blanditiis rem harum exercitationem sequi nam rerum commodi doloribus! Reiciendis quo cupiditate, ut aspernatur, vitae nihil consectetur
-                      corrupti, est fuga odio officia architecto reprehenderit laborum! Minima quos sit commodi ipsam alias beatae odit. Ullam animi magni veniam suscipit deleniti ad sed veritatis ducimus molestiae in nostrum, fuga corporis
-                      eum! Aut quam sint nemo fugit quod ipsa vitae laborum tempore, temporibus corporis, illo, incidunt molestiae doloremque culpa impedit aliquam expedita libero laudantium! Soluta animi sint ab dolores deserunt
-                      blanditiis, provident hic, molestiae quod omnis, neque tempora culpa facere voluptas corrupti? Ea optio ducimus inventore saepe placeat nihil, praesentium exercitationem, consectetur nesciunt dolore consequatur sed?
-                      Minus distinctio tempora excepturi iste ea recusandae qui possimus sapiente, quasi sint dolores quae illum quibusdam molestias, quo necessitatibus quod dolore? Ipsum, voluptatem commodi labore autem aut quod odio omnis
-                      consequuntur fuga illo quo dolor iure repellendus nihil in nisi saepe provident reprehenderit eum corrupti, soluta explicabo atque culpa! Nostrum eum distinctio officia, laboriosam at recusandae odio, voluptatem sint
-                      pariatur ducimus hic, odit iste error id aut quae impedit voluptates magnam? Quam incidunt magni ex? Et, quam molestias voluptatem, ratione quidem odio optio, rerum provident quo quod quae?
-                    </p>
+                    Jangan lupa siapkan senyumanmu!<br />
+                    <p>Senyum di pagi hari memiliki dampak yang luar biasa pada berbagai aspek kesehatan dan kesejahteraan kita. Ketika kita memulai hari dengan senyuman, kita memberi diri sendiri manfaat emosional dan fisik yang signifikan. Senyum secara langsung merangsang pelepasan hormon endorfin, yang meredakan stres dan meningkatkan mood kita. Rasanya seperti awal yang cerah, yang mengirim sinyal positif ke otak kita dan membantu kita menghadapi hari dengan semangat yang lebih baik.<br>Lebih dari sekadar menaikkan mood, senyum juga memiliki dampak positif pada kesejahteraan sosial kita. Ini adalah cara alami untuk membuka pintu interaksi positif dengan orang lain. Senyuman membuat kita lebih ramah dan mudah didekati, memperkuat ikatan dengan teman, keluarga, dan rekan kerja. Ini menciptakan lingkungan sosial yang lebih positif dan hangat.</p>
                   </div>
                 </div>
               </div>
@@ -109,25 +99,10 @@
               <div class="col-lg-8 mt-3">
                 <div class="todo-11 bg-purple position-relative h-100">
                   <img src="public/images/icon-food-fried-eggs.png" alt="" class="jempol position-absolute" />
-                  <div class="isi-todo-11 p-4">
-                    Mungkin kamu bisa <br />
-                    mencoba jogging
-                    <p>
-                      Jogging adalah olahraga sederhana yang memberikan sejumlah manfaat signifikan bagi kesehatan fisik dan mental. Salah satu manfaat utamanya adalah meningkatkan kesehatan jantung dan sistem peredaran darah. Dengan
-                      berjoging
-                    </p>
+                  <div class="isi-todo-11 p-4">Kenapa harus sarapan
+                    <p>Sarapan adalah kebiasaan penting dengan manfaat yang tak terbantahkan bagi kesehatan dan kesejahteraan kita. Setelah malam berpuasa saat tidur, tubuh kita membutuhkan sumber energi untuk memulai hari dengan baik.</p>
                   </div>
                 </div>
-              </div>
-            </div>
-
-            <div class="pertanyaan mt-5 w-75">
-              <div class="todo-judul rounded-5 bg-opacity-25 bg-white d-inline py-1 px-4">pertanyaan</div>
-              <h1 class="mt-3">Diantara 1 sampai 10, seberapa siap kah kamu untuk memulai hari?</h1>
-              <p>jawab pertanyaan diatas dengan mengisi dibawah ini</p>
-              <div class="input-group mb-3 mt-4">
-                <input type="text" class="form-control" placeholder="Jawab dengan angka 8 jam" aria-label="" aria-describedby="button-addon2" />
-                <button class="tombol-submit2 p-2 p-lg-3" type="button" id="button-addon2">submit</button>
               </div>
             </div>
             <img src="public/images/orangtangan.png" alt="" class="orangtangan position-absolute" />
@@ -135,7 +110,6 @@
         </div>
       </div>
     </section>
-    <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   </body>
 </html>
