--- a/sore.html
+++ b/sore.html
@@ -1,69 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Bootstrap demo</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.scss" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:wght@100;400;700&family=Montserrat:wght@400;500;600;700&family=Outfit:wght@400;500;600;700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
   <body>
-    <section id="home">
+ <section id="home">
       <div class="container">
         <div class="row justify-content-center">
-          <div class="col-lg-5 home2">
-            <img src="public/images/sepeda.png" alt="sepeda" class="w-100 h-100 sepeda" />
-          </div>
-          <div class="col-lg-7 mt-3 mt-lg-0">
-            <div class="welcome1 p-4 position-relative h-100 w-100">
+          <div class="col-xl-6">
+            <div class="welcome7 p-4 position-relative h-100 w-100 mt-3 mt-xl-0">
               <div class="welcome-container">
                 <div class="welcome-judul rounded-5 bg-opacity-25 bg-white d-inline py-1 px-4">welcome!</div>
                 <div class="welcome-isi lh-1 mt-3">
-                  Yuk Olahraga <br />
-                  biar sehat! <br />
-                  <p class="lh-base mt-3">
-                    Jangan khawatir, tidak perlu memulai dengan latihan yang terlalu berat. Mulailah dengan peregangan ringan untuk merenggangkan otot-otot Anda. Peregangan ini bisa membantu Anda merasa lebih rileks dan siap untuk
-                    beraktivitas. Jadi, tidak perlu terlalu berat, yang penting Anda merasa nyaman dan santai, seperti bersepeda
-                  </p>
+                  Wah kayanya udah selesai nih tugas hari ini
+                  <p class="lh-base mt-3">Tugas Hari Ini Sudah Selesai: Waktunya untuk Istirahat dan Bersantai</p>
                 </div>
 
                 <a href="" type="button" class="btn btn-outline-light">Selanjutnya</a>
               </div>
             </div>
           </div>
+          <div class="col-3 home5 mt-5 mt-xl-0">
+            <img src="public/images/senja1.png" alt="sepeda" class="w-100 h-100 sepeda" />
+          </div>
+          <div class="col-3 home5 mt-5 mt-xl-0">
+            <img src="public/images/senja2.png" alt="sepeda" class="w-100 h-100 sepeda" />
+          </div>
         </div>
       </div>
     </section>
 
     <section id="todo">
-      <div class="container mt-5 overflow-hidden">
+      <div class="container mt-5">
         <div class="container-dalam">
           <div class="todo-container position-relative">
             <div class="todo-judul rounded-5 bg-opacity-25 bg-white d-inline py-1 px-4">konten</div>
-            <div class="todo-header lh-1 mt-3">
-              Masa sih ga tau manfaat <br />
-              dari <span class="todo-header-underline"> olahraga</span>
-            </div>
+            <div class="todo-header lh-1 mt-3"><span class="todo-header-underline"> Waktu sore</span> enaknya ngapain ya</div>
 
             <div class="row justify-content-center mt-5">
               <div class="row col-lg-8 order-2 order-lg-1 mt-3 mt-lg-0">
                 <div class="col-12">
-                  <div class="todo-11 bg-yellow position-relative h-100">
-                    <!-- <img src="public/images/thumbs-up.png" alt="" class="jempol position-absolute" /> -->
-                    <div class="isi-todo-11 p-4">
-                      Mungkin kamu bisa <br />
-                      mencoba jogging
-                      <p>
-                        Jogging adalah olahraga sederhana yang memberikan sejumlah manfaat signifikan bagi kesehatan fisik dan mental. Salah satu manfaat utamanya adalah meningkatkan kesehatan jantung dan sistem peredaran darah. Dengan
-                        berjoging
-                      </p>
-                    </div>
+                  <div class="todo-3">
+                    <img src="public/images/senja3.png" alt="" />
                   </div>
                 </div>
 
-                <div class="col-lg-6 mt-3">
-                  <div class="todo-3">
-                    <img src="public/images/barbel.png" alt="" />
-                  </div>
-                </div>
-                <div class="col-lg-6 mt-3">
+                <div class="col-lg-7 mt-3">
                   <div class="todo-2 position-relative pb-5 mt-3 mt-lg-0">
-                    <img src="public/images/gymming.png" alt="" class="position-absolute gym" />
-                    <div class="isi-todo-22 px-5 py-3 w-75">kenapa harus olahraga</div>
-                    <div class="isi2-todo22">
+                    <img src="public/images/matahariii.png" alt="" class="position-absolute matahari" />
+                    <div class="isi-todo-7 px-5 py-3">fakta menarik dari mandi pagi</div>
+                    <div class="isi2-todo7">
                       <p class="mb-1">
                         <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 22 22" fill="none">
                           <circle cx="11" cy="11" r="11" fill="white" />
@@ -97,30 +94,34 @@
                     </div>
                   </div>
                 </div>
+                <div class="col-lg-5 mt-3">
+                  <div class="todo-3">
+                    <img src="public/images/bertapa.png" alt="" />
+                  </div>
+                </div>
               </div>
 
               <div class="col-lg-4 order-1 order-lg-2 position-relative">
-                <img src="public/images/api.png" alt="" class="api position-absolute" />
-                <div class="px-2 px-lg-0 cjogging">
-                  <img src="public/images/jogging.jpg" alt="" class="jogging" />
+                <div class="todo-11 bg-green position-relative h-100 mx-2 mx-lg-0">
+                  <img src="public/images/emot tapa.png" alt="" class="tapa position-absolute" />
+                  <div class="p-4">
+                    <p class="isi-todo-1">nih hal-hal yang bikin sehat di waktu sore</p>
+                    <div class="isi-todo-1">
+                      <p>
+                        Sore hari adalah waktu yang tepat untuk melakukan berbagai kegiatan yang mendukung kesehatan dan kesejahteraan. Anda dapat memanfaatkan waktu ini dengan ber Olahraga ringan seperti yoga atau peregangan dapat membantu
+                        menjaga fleksibilitas dan kesehatan otot.
+                      </p>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
-            <div class="pertanyaan mt-5 w-75">
-              <div class="todo-judul rounded-5 bg-opacity-25 bg-white d-inline py-1 px-4">pertanyaan</div>
-              <h1 class="mt-3">Berapa kali kamu push-up hari ini</h1>
-              <p>jawab pertanyaan diatas dengan mengisi dibawah ini</p>
-              <div class="input-group mb-3 mt-4">
-                <input type="text" class="form-control" placeholder="Jawab dengan angka 8 jam" aria-label="" aria-describedby="button-addon2" />
-                <button class="tombol-submit11 p-2 p-lg-3" type="button" id="button-addon2">submit</button>
-              </div>
-            </div>
-            <img src="public/images/Group 148" alt="" class="monyet position-absolute" />
+            <img src="public/images/emotmac.png" alt="" class="orangtangan position-absolute" />
           </div>
         </div>
       </div>
     </section>
-    <script src="script.js"></script>
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   </body>
 </html>
