--- a/bangun.html
+++ b/bangun.html
@@ -21,7 +21,7 @@
               </div>
             </div>
             <div class="jam mt-3 text-center justify-content-center col d-lg-none d-flex">
-              <p class="align-self-center m-0">08 : 23 AM</p>
+              <p class="align-self-center m-0">Wake Up Bro!</p>
             </div>
           </div>
           <div class="col-lg-5 home2 row-cols-1 row order-1 order-lg-2">
@@ -29,7 +29,7 @@
               <img class="" src="public/images/federico-respini-s-yffw-0-l-nr-7-s-unsplash-2.jpg" alt="" width="100%" />
             </div>
             <div class="jam mt-3 text-center justify-content-center col d-none d-lg-flex">
-              <p class="align-self-center m-0">08 : 23 AM</p>
+              <p  class="align-self-center m-0">Wake Up Bro!</p>
             </div>
           </div>
         </div>
