section tidur ditambahakan

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
               <path d="M28 32V36C28 39.866 24.866 43 21 43C17.134 43 14 39.866 14 36V32L28 32Z" fill="#688BFE" />
             </svg>
   
-            <h1 class="d-none d-md-block nav-logo">Health<span>thin.</span></h1>
+            <h1 class="d-none d-md-block nav-logo">Health<span>thine.</span></h1>
           </a>
   
           <div id="jamku" class="clock d-block d-md-none"></div>
